--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/styles/style.css">
+  <link rel="preload" as="image" href="/assets/images/warehouse.jpg">
+  <link rel="preload" as="image" href="/assets/images/lumping.jpg">
+  <link rel="preload" as="image" href="/assets/images/check.jpg">
   <script src="assets/js/main.js" defer></script>
   <title>L4U Solutions</title>
 </head>
