--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   </header>
 
   <main>
-    <section id="about" class="bg-image">
+    <section id="about" class="bg-image bg-about">
       <div class="content">
         <h2>About</h2>
         <p>L4U Solutions is a specialized organization dedicated to providing custom freight repackaging and reorganization services. We cater to businesses that require manual intervention in the handling and management of their shipments within trailers or warehouses. Our experienced team is adept at meticulously unloading individual items from skids, systematically organizing and counting them, and subsequently placing them back into trailers or designated storage areas. When automated solutions fall short, L4U Solutions is committed to ensuring seamless and efficient shipment handling and storage management for our clients.</p>
       </div>
     </section>
 
-    <section id="services" class="bg-image">
+    <section id="services" class="bg-image bg-services">
       <div class="content">
         <h2>Services</h2>
         <div class="card-container">
@@ -47,7 +47,7 @@
       </div>
     </section>
 
-    <section id="contact" class="bg-image">
+    <section id="contact" class="bg-image bg-contact">
       <div class="content">
         <h2>Contact Us</h2>
         <form>
